fixed: button letter spacing was not inherited.

--- a/src/scss/imports/_defaults.scss
+++ b/src/scss/imports/_defaults.scss
@@ -47,6 +47,7 @@ button {
     margin: 0;
     padding: 0;
     font: inherit;
+    letter-spacing: inherit;
 }
 
 img {
